# suture-stream-repair

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
crates/suture/: Cargo.toml  README.md
crates/suture-core/: Cargo.toml  README.md
crates/suture-core/proptest-regressions/: lib.txt
crates/suture-core/src/: lib.rs  non_streaming.rs  repair.rs
crates/suture-sse/: Cargo.toml  README.md
crates/suture-sse/src/: anthropic.rs  converse.rs  eventstream.rs  extractor.rs  gemini.rs  lib.rs  openai.rs  repairer.rs  sse_parse.rs  stream.rs  target.rs
crates/suture/benches/: codec.rs
crates/suture/src/: config.rs  encoding.rs  lib.rs  main.rs  proxy.rs
crates/suture/tests/: proxy_it.rs
deploy/: README.md  cloudrun.yaml  ecs-fargate-taskdef.json  k8s-sidecar.yaml
docs/blog/: why-llm-tool-calls-break.md
site/: index.html
