[package]
name = "suture-repair-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Byte-level JSON stream repair engine — closes truncated/malformed LLM JSON."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensorhq/suture-stream-repair"
homepage = "https://github.com/tensorhq/suture-stream-repair"
readme = "README.md"
keywords = ["json", "repair", "streaming", "llm", "parser"]
categories = ["parsing", "text-processing"]

[lib]
name = "suture_core"

[dependencies]
serde_json = { version = "1", optional = true, features = ["preserve_order"] }

[features]
serde = ["dep:serde_json"]

[dev-dependencies]
serde_json = "1"
proptest = "1"
