[package]
name = "suture-sse"
version = "0.1.0"
edition = "2021"
description = "SSE-aware JSON stream repair for LLM streaming APIs."
license = "MIT OR Apache-2.0"

[dependencies]
suture-core = { path = "../suture-core" }
serde_json = "1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
crc32fast = "1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
