[package]
name = "suture-repair-sse"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "SSE-aware JSON stream repair for OpenAI/Anthropic/Vertex/Bedrock LLM streams."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensorhq/suture-stream-repair"
homepage = "https://github.com/tensorhq/suture-stream-repair"
readme = "README.md"
keywords = ["sse", "json", "llm", "streaming", "openai"]
categories = ["parsing", "web-programming"]

[lib]
name = "suture_sse"

[dependencies]
suture-repair-core = { path = "../suture-core", version = "0.1.0" }
serde_json = "1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
crc32fast = "1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
