[package]
name = "suture"
version = "0.1.0"
edition = "2021"
description = "Suture: ultra-low latency streaming JSON repair proxy."
license = "MIT OR Apache-2.0"

[lib]
name = "suture"
path = "src/lib.rs"

[[bin]]
name = "suture"
path = "src/main.rs"

[dependencies]
suture-core = { path = "../suture-core" }
suture-sse = { path = "../suture-sse" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
bytes = "1"
futures-util = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zlib"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
futures = "0.3"
serde_json = "1"
flate2 = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "codec"
harness = false
