[package]
name = "suture-repair"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Ultra-low latency reverse proxy that repairs truncated JSON in LLM streams."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensorhq/suture-stream-repair"
homepage = "https://github.com/tensorhq/suture-stream-repair"
readme = "README.md"
keywords = ["llm", "proxy", "json", "streaming", "openai"]
categories = ["web-programming::http-server", "command-line-utilities"]

[lib]
name = "suture"
path = "src/lib.rs"

[[bin]]
name = "suture"
path = "src/main.rs"

[dependencies]
suture-repair-core = { path = "../suture-core", version = "0.1.0" }
suture-repair-sse = { path = "../suture-sse", version = "0.1.0" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
bytes = "1"
futures-util = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zlib"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
futures = "0.3"
serde_json = "1"
flate2 = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "codec"
harness = false
